# avr-modern-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
cmake/: FindGTest.cmake  avr_gcc_toolchain.cmake  avr_upload.cmake
lib/: CMakeLists.txt
lib/AvrHw/: CMakeLists.txt
lib/AvrHw/include/AvrHw/: Gpio.hpp  Platform.hpp
lib/AvrHw/src/AvrHw/: empty.cpp
lib/HwReg/: CMakeLists.txt
lib/HwReg/include/HwReg/: IoReg.hpp  TypeHelper.hpp
lib/Mmio/: CMakeLists.txt
lib/Mmio/include/Mmio/: Mmio.hpp  Register.hpp
src/: CMakeLists.txt
src/blink-example/: CMakeLists.txt  main.cpp
src/gpio-example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/HwReg_tests/: CMakeLists.txt  TypeHelper_tests.cpp
tests/Mmio_tests/: CMakeLists.txt  Mmio_tests.cpp
